fix tooltip z-index

--- a/files/assets/css/main.css
+++ b/files/assets/css/main.css
@@ -2000,7 +2000,7 @@ button.close {
 }
 .tooltip {
 	position: absolute;
-	z-index: 1070;
+	z-index: 107000;
 	display: block;
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
